# eds

./: Cargo.toml
eds/: Cargo.toml
eds-core/: Cargo.toml  README.md
eds-core/src/: crc.rs  error.rs  lib.rs
eds-reader/: Cargo.toml
eds-reader/src/: lib.rs  reader.rs
eds-reader/tests/: base.rs  breaking.rs  sticking.rs
eds-writer/: Cargo.toml
eds-writer/src/: lib.rs  writer.rs
eds-writer/tests/: base.rs
eds/src/: decode.rs  encode.rs  frame.rs  lib.rs
eds/tests/: base.rs  empty.rs
