[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded"]
description = "Easy data separator"
documentation = "https://docs.rs/eds"
edition = "2018"
homepage = "https://unmp.crise.cn"
keywords = ["eds", "unmp", "iot"]
license-file = "LICENSE"
name = "eds-core"
readme = "./README.md"
repository = "https://github.com/unmp/eds.git"
version = "0.5.1"

[dependencies]
crc16 = "^0.4.0"
