[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded"]
description = "eds reader"
documentation = "https://docs.rs/eds-reader"
edition = "2018"
homepage = "https://unmp.crise.cn"
keywords = ["eds", "unmp", "iot"]
license-file = "LICENSE"
name = "eds-reader"
readme = "./README.md"
repository = "https://github.com/unmp/eds.git"
version = "0.1.4"

[dependencies]
bytes = {version = "1.1", default-features = false}
eds-core = {version = "0.5", path = "../eds-core"}
