[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded"]
description = "eds writer"
documentation = "https://docs.rs/eds-writer"
edition = "2018"
homepage = "https://unmp.crise.cn"
keywords = ["eds", "unmp", "iot"]
license-file = "LICENSE"
name = "eds-writer"
readme = "./README.md"
repository = "https://github.com/unmp/eds.git"
version = "0.1.3"

[dependencies]
bytes = {version = "1.1", default-features = false}
eds-core = {version = "0.5", path = "../eds-core"}
