[package]
name = "eds"
version = "0.5.0"
authors = ["rise0chen <rise0chen@163.com>"]
description = "Easy data separator"
documentation = "https://docs.rs/eds"
homepage = "https://unmp.crise.cn"
repository = "https://github.com/unmp/eds.git"
readme = "./README.md"
keywords = ["eds", "unmp", "iot"]
categories = ["embedded"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
crc16 = "^0.4.0"
