[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["embedded"]
description = "Easy data separator"
documentation = "https://docs.rs/eds"
edition = "2018"
homepage = "https://unmp.crise.cn"
keywords = ["eds", "unmp", "iot"]
license-file = "LICENSE"
name = "eds"
readme = "./README.md"
repository = "https://github.com/unmp/eds.git"
version = "0.5.1"

[features]
alloc = ["eds-reader", "eds-writer"]

[dependencies]
eds-core = {version = "0.5", path = "../eds-core"}
eds-reader = {version = "0.1", path = "../eds-reader", optional = true}
eds-writer = {version = "0.1", path = "../eds-writer", optional = true}
